--- a/HtmlCss/PseudoSelector.html
+++ b/HtmlCss/PseudoSelector.html
@@ -7,7 +7,7 @@
     <title>Psuedo Selectors</title>
 </head>
 <style>
-    .button1 {
+    /* .button1 {
         padding: 20px;
     }
     .button1:hover{
@@ -15,11 +15,15 @@
     }
       .button1:active{
         color:green;
+    } */
+    a:visited{
+        color: yellow;
     }
 </style>
 
 <body>
-    <button class="button1">Select</button>
+  <a href="##"> Select</a>
+  <a href="####">  Button2</a>
 </body>
 
 </html>
