--- a/HtmlCss/Bootstrap.html
+++ b/HtmlCss/Bootstrap.html
@@ -19,6 +19,23 @@
     <button class="btn-secondary">secondary</button>
     <button class="btn-warning">warning</button>
     <button class="btn-lg">large button</button>
+    <hr>
+    <div class="table">
+        <table class="table">
+            <thead>
+                table
+       
+            <th>NAME</th>
+            <th>Roll No</th>
+            <th>Class</th>     </thead>
+          <tr>  <td>Bajrang</td>
+            <td>11212766</td>
+            <td>B3</td></tr>
+            <td>Harsh</td>
+            <td>11212543</td>
+            <td>B1</td>
+        </table>
+    </div>
 </body>
 
 </html>
