--- a/HtmlCss/Bootstrap.html
+++ b/HtmlCss/Bootstrap.html
@@ -23,8 +23,6 @@
     <div class="table">
         <table class="table">
             <thead>
-                table
-       
             <th>NAME</th>
             <th>Roll No</th>
             <th>Class</th>     </thead>
@@ -35,6 +33,11 @@
             <td>11212543</td>
             <td>B1</td>
         </table>
+    </div>
+    <hr>
+    <div class="col md-4">
+<hr>
+<img src="https://images.unsplash.com/photo-1623282033815-40b05d96c903?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YXBpfGVufDB8fDB8fHww" alt="" class="rounded-circle" srcset="">  <img src="https://images.unsplash.com/photo-1623282033815-40b05d96c903?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YXBpfGVufDB8fDB8fHww" alt="" class="rounded-circle" srcset="">  <img src="https://images.unsplash.com/photo-1623282033815-40b05d96c903?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YXBpfGVufDB8fDB8fHww" alt="" class="rounded-circle" srcset="">  <img src="https://images.unsplash.com/photo-1623282033815-40b05d96c903?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YXBpfGVufDB8fDB8fHww" alt="" class="rounded-circle" srcset="">
     </div>
 </body>
 
