--- a/JavascriptBasics/ControlStatement.html
+++ b/JavascriptBasics/ControlStatement.html
@@ -48,6 +48,15 @@
                 console.log("Number is greater than 3")
 
     }
+
+
+    // Ternary Operator
+
+    let color = "orange"
+
+    let result = color == "orange" ? "positive" : "Negative"
+
+    console.log(`test report is ${result}`)
 </script>
 
 </html>
