--- a/JavascriptBasics/ControlStatement.html
+++ b/JavascriptBasics/ControlStatement.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control Statement</title>
 </head>
+
 <body>
     <h1>Control Statement</h1>
     <p>Execution of a program on spacific condition is known as control statement</p>
     <p>There is two type of control statement</p>
-<ul>Itrative</ul>
-<ul>conditional</ul>
-<i>You can use js of this file to know better about control statement</i>
-
+    <ul>Itrative</ul>
+    <ul>conditional</ul>
+    <i>You can use js of this file to know better about control statement</i>
+    <p id="demo">Hello</p>
 </body>
 <script>
-    let age = 30;
-    if(age == 19){
-        console.log("hey you can drink daru")
+
+    // if else condtion
+
+    let age = 32;
+    if (age == 30) {
+        document.getElementById("demo").innerHTML = "You can't drink daru";
     }
-    if(age == 30 ){
-        console.log("you can't drink daru baby")
+    else {
+        document.getElementById("demo").innetHTML = "hello ";
+    }
+
+    // switch statement
+    let number = 3;
+
+    switch (number) {
+        case 0:
+            console.log("zero");
+            break; 
+            case 1:
+            console.log("one");
+            break; 
+            case 2:
+            console.log("two");
+            break; 
+            case 3:
+            console.log("three");
+            break;
+            default:
+                console.log("Number is greater than 3")
+
     }
 </script>
+
 </html>
