--- a/JavascriptBasics/ControlStatement.html
+++ b/JavascriptBasics/ControlStatement.html
@@ -57,6 +57,22 @@
     let result = color == "orange" ? "positive" : "Negative"
 
     console.log(`test report is ${result}`)
+
+    // for loop
+
+    for (let i= 0 ; i <= 10 ; i++){
+        console.log(i)
+    }
+
+    // while 
+
+    let a = 0;
+
+    while (a == 0) {
+        console.log("oye papa ji krdiya tumhara browser hang")
+        
+    }
+
 </script>
 
 </html>
